Attempt 3 at fixing modal issue on safari

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 /* Generic custom styles here */
 
+.modal-backdrop {
+    height: 100%;
+}
+
 .content {
     margin-top: 70px;
 }
